[package]
name = "speedcurl"
version = "0.1.0"
edition = "2024"
description = "Ultra-high-performance, zero-disk-I/O speedtest engine (Axum + Tokio)"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1"

# Speed is the product. Squeeze the release binary for maximum throughput.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
